public/css/main.css
@import url(https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day|Sniglet:800|Monoton|Fredoka+One|Lobster);
html {
	background: black;
}
.navbar{
	background: black;
}
body {
	color: #fff;
	background: black;
} 

.hamburger {
	font: 800 64px/64px 'Sniglet', sans-serif;
	color: darkred;
	text-shadow: -1px 1px 0 #9a653b,
		-2px 2px 0 #9a653b,
		-6px 1px 0 #690,
		2px 4px 0 #a10,
		-3px 3px 0 #e1b38e,
		-4px 4px 0 #9a653b,
		-5px 5px 0 #9a653b;
}

.navbar-header{
    color: #fff;
    background: black;
}

.container-fluid {
    color: #fff;
    background: black;
}

.showcase__content>span{
	transition:all 0.5s ease-in-out;
}
.showcase__content>span:hover {
	text-shadow: none;
}


.showcase {
	position: relative;
	padding: 25px;
	text-align: center;
}

.showcase::before {
		position: absolute;
		top: 50px;
		left: 10%;
		display: block;
		width: 80%;
		border-bottom: 1px solid #fff;
		content: "";
	}

.couchpic {
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 50px;
	width: 350px;
}

.counteronpage{
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 50px;
	width: 350px;
}

.dynamicdata{
	margin-top: 3%;
	margin-bottom: 3%;
	font-family: 'Righteous', cursive;
	font-size: x-large;
}

ul.ultimatelist {
	list-style-type: none;
	margin: 0;
	padding: 0;
	color: #ffdb58;
  }

  .showcompletion{
	color: white;
    position: relative;
    top: -20px;
  }

  .watchingcard {
	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
	transition: 0.3s;
	width: 40%;
  }
  
  
 .movie{
	display: inline-block;
 }

  img {
	  width: 75%;
  }


  .btn {
  box-sizing: border-box;
  appearance: none;
  background-color: transparent;
  border: 2px solid #e74c3c;
  border-radius: 0.6em;
  color: #e74c3c;
  cursor: pointer;
  display: flex;
  align-self: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1;
  margin: 20px;
  padding: 1.2em 2.8em;
  text-decoration: none;
  text-align: center;
  text-transform: uppercase;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  }

  button, input[type="button"], input[type="submit"] { 
	box-sizing: border-box;
	appearance: none;
	background-color: transparent;
	border: 2px solid #e74c3c;
	border-radius: 0.6em;
	color: #e74c3c;
	cursor: pointer;
	display: flex;
	align-self: center;
	font-size: 1rem;
	font-weight: 400;
	line-height: 1;
	margin: 20px;
	padding: 1.2em 2.8em;
	text-decoration: none;
	text-align: center;
	text-transform: uppercase;
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
}  

